name:                language-lustre
version:             0.1.0.0
synopsis:            Tools for working with the Lustre language>
description:         Tools for working with the Lustre language.
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Language.Lustre.AST,
                       Language.Lustre.Panic,
                       Language.Lustre.Parser.Lexer,
                       Language.Lustre.Parser,
                       Language.Lustre.Parser.Monad,
                       Language.Lustre.Core,

                       Language.Lustre.Transform.ToCore,
                       Language.Lustre.Transform.OrderDecls,

                       Language.Lustre.Semantics,
                       Language.Lustre.Semantics.Const,

                       Language.Lustre.Semantics.Value,
                       Language.Lustre.Semantics.Stream,
                       Language.Lustre.Semantics.Env,
                       Language.Lustre.Semantics.BuiltIn,
                       Language.Lustre.Semantics.Expression,
                       Language.Lustre.Semantics.Equation

  build-depends:       base <4.12,
                       alex-tools >=0.4,
                       text, array, panic, containers, GraphSCC, pretty
  build-tools:         alex, happy
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite lexer
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Lexer.hs
  build-depends: base, text, language-lustre

test-suite parser
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Parser.hs
  build-depends:
    base, text, filepath, directory, bytestring, language-lustre

test-suite order
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Order.hs
  build-depends:
    base, text, filepath, directory, bytestring, language-lustre, pretty-show



test-suite core
  type: exitcode-stdio-1.0
  main-is: Core.hs
  hs-source-dirs: tests
  build-depends: base, text, language-lustre




