name:                language-lustre
version:             0.1.0.0
synopsis:            Tools for working with the Lustre language.
description:         Tools for working with the Lustre language.
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Language.Lustre.AST,
                       Language.Lustre.Panic,
                       Language.Lustre.Parser.Lexer,
                       Language.Lustre.Parser,
                       Language.Lustre.Parser.Monad,
                       Language.Lustre.Pretty,
                       Language.Lustre.Core,
                       Language.Lustre.Utils,
                       Language.Lustre.ModelState,

                       Language.Lustre.TypeCheck,
                       Language.Lustre.TypeCheck.Constraint,
                       Language.Lustre.TypeCheck.Monad,

                       Language.Lustre.Transform.OrderDecls,
                       Language.Lustre.Transform.NoStatic,
                       Language.Lustre.Transform.NoStruct,
                       Language.Lustre.Transform.Inline,
                       Language.Lustre.Transform.ToCore,
                       Language.Lustre.Transform.Desugar,

                       Language.Lustre.Semantics.Const,
                       Language.Lustre.Semantics.Value,
                       Language.Lustre.Semantics.BuiltIn,
                       Language.Lustre.Semantics.Core


  build-depends:       base < 4.13,
                       alex-tools >=0.4,
                       bytestring, text, array, panic, containers,
                       GraphSCC, pretty, monadLib
  build-tools:         alex, happy
  default-language:    Haskell2010
  ghc-options:         -Wall

executable lustre
  hs-source-dirs: exe
  main-is: Lustre.hs
  build-depends: base, containers, pretty, language-lustre

test-suite lexer
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: Lexer.hs
  build-depends: base, text, language-lustre

test-suite parser
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: Parser.hs
  build-depends:
    base, filepath, directory, language-lustre

test-suite order
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: Order.hs
  build-depends:
    base, filepath, directory, containers, pretty, language-lustre

test-suite no-static
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: NoStatic.hs
  build-depends:
    base, filepath, directory, containers, pretty, language-lustre

test-suite no-struct
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: NoStruct.hs
  build-depends:
    base, filepath, directory, containers, pretty, language-lustre

test-suite inline-calls
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: InlineCalls.hs
  build-depends:
    base, filepath, directory, containers, pretty, language-lustre

test-suite desugar
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: Desugar.hs
  build-depends:
    base, filepath, directory, containers, pretty, language-lustre



test-suite core
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Core.hs
  hs-source-dirs: tests
  build-depends: base, text, language-lustre




