name:                language-lustre
version:             0.1.0.0
synopsis:            Tools for working with the Lustre language.
description:         Tools for working with the Lustre language.
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Language.Lustre.AST,
                       Language.Lustre.Defines,
                       Language.Lustre.Name,
                       Language.Lustre.Monad,
                       Language.Lustre.Error,
                       Language.Lustre.Panic,
                       Language.Lustre.Parser.Lexer,
                       Language.Lustre.Parser,
                       Language.Lustre.Parser.Monad,
                       Language.Lustre.Pretty,
                       Language.Lustre.Core,
                       Language.Lustre.Utils,
                       Language.Lustre.ModelState,
                       Language.Lustre.Driver,
                       Language.Lustre.Phase,

                       Language.Lustre.TypeCheck,
                       Language.Lustre.TypeCheck.Constraint,
                       Language.Lustre.TypeCheck.Monad,
                       Language.Lustre.TypeCheck.Prims,
                       Language.Lustre.TypeCheck.Utils,

                       Language.Lustre.Transform.OrderDecls,
                       Language.Lustre.Transform.NoStatic,
                       Language.Lustre.Transform.NoStruct,
                       Language.Lustre.Transform.Inline,
                       Language.Lustre.Transform.ToCore,

                       Language.Lustre.Semantics.Const,
                       Language.Lustre.Semantics.Value,
                       Language.Lustre.Semantics.BuiltIn,
                       Language.Lustre.Semantics.Core


  build-depends:       base,
                       alex-tools >=0.4,
                       bytestring, text, array, panic, containers,
                       GraphSCC, pretty, monadLib >= 3.8
  build-tools:         alex, happy
  default-language:    Haskell2010
  ghc-options:         -Wall

executable lustre
  hs-source-dirs: exe
  main-is: Lustre.hs

  other-modules:
    Options

  build-depends:
    base,
    containers,
    pretty,
    simple-get-opt == 0.4.*,
    language-lustre

  ghc-options:         -Wall
  default-language:    Haskell2010


